@@ -3,17 +3,10 @@ TO DO
 Note that this is not a complete to do list. It mostly only lists bugs
 and quirks that I need to fix eventually.
 
-- right-click with empty fsb tree broken
-- clear toExpand list in fsb
-- moving a dir from an expanded branch to root doesn't reload root
-- action bar focus problems with window maker
 - removing a plugin doesn't update install plugins tab
 - isn't fsb dir search supposed to use selected file's extension?
 - quicknotepad: use a box not a tool bar
 - C+b, action bar: insert longest common prefix
-- help viewer: listen for plugin load/unload and update toc
-- log: copy button should copy whole log if nothing is selected
-- editing option pane is not very intuitive
 - beanshell: invokeAction() function
 - if A depends on B but A is loaded before B and B breaks, A ends up
   being loaded. Solution: load plugins in order of dependencies?
@@ -25,7 +18,7 @@ and quirks that I need to fix eventually.
 - save file --> collapse to < visibleLines -- click beyond last line
   --> exception
 - while loading --> scroll bar
-- load help toc in a thread, do help search in a thread
+- do help search in a thread
 - update quicknotepad docs
 - quicknotepad: handle no settings dir more gracefully
 - save caret info first
